orchestrator/ingress/authz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authz
  namespace: dkms-main-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authz
  template:
    metadata:
      labels:
        app: authz
      annotations:
        karpenter.sh/do-not-disrupt: "true"
    spec:
      containers:
      - name: authz
        image: docker.io/pablopio/authz:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: authz
  namespace: dkms-main-ns
spec:
  selector:
    app: authz
  ports:
  - name: http
    port: 8081
    targetPort: 8081
