orchestrator/ingress/orchestator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestator
  namespace: dkms-main-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestator
  template:
    metadata:
      labels:
        app: orchestator
      annotations:
        karpenter.sh/do-not-disrupt: "true"
    spec:
      serviceAccountName: orchestator
      containers:
        - name: orchestator
          image: docker.io/pablopio/orchestator:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /orch/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /orch/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: orchestator
  namespace: dkms-main-ns
spec:
  selector:
    app: orchestator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
