orchestrator/ingress/ingress-dkms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dkms-<DKMS_ID>-ingress
  namespace: "<SIM_NAMESPACE>"
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "<INGRESS_AUTH_URL>"
    nginx.ingress.kubernetes.io/auth-response-headers: "<INGRESS_AUTH_HEADERS>"
    nginx.ingress.kubernetes.io/auth-snippet: "proxy_set_header Authorization $http_authorization; proxy_set_header X-Simulation-Id $http_x_simulation_id;"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: <INGRESS_CLASS>
  rules:
  - http:
      paths:
      - path: /api/sim/<SIM_ID>/dkms/<DKMS_ID>(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: dkms-<DKMS_ID>
            port:
              number: <DKMS_PORT>
